Update to Java 25 with latest dependencies and modern features
- Java version: 21 -> 25
- JUnit: 5.11.0 -> 6.0.2 (using BOM)
- Jackson: 2.17.2 -> 2.21.0
- Guava: 33.3.1-jre -> 33.5.0-jre
- Mockito: 5.13.0 -> 5.21.0
- SLF4J: 2.0.16 -> 2.0.17
- Logback: 1.5.8 -> 1.5.15
- Maven Compiler Plugin: 3.13.0 -> 3.14.1
- Maven Surefire Plugin: 3.5.0 -> 3.5.4

Test modernizations with Java 25 features:
- Virtual threads in MoneyThreadSafetyTest (Executors.newVirtualThreadPerTaskExecutor)
- Enhanced switch expressions in EqualsHashCodeTestCase
- Modern switch with Integer.signum in ComparabilityTestCase
- Added @DisplayName annotation for better test reporting
- Renamed MoneyThreadSafety to MoneyThreadSafetyTest to match test naming convention
- Configured Surefire to use classpath for test compatibility

All 75 tests passing.

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>